--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: application
+name: money_manager_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,11 +29,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  google_maps_flutter: ^2.0.3
+  http: ^0.13.2
+  camera: ^0.8.1
+  path_provider: ^2.0.1
+  permission_handler: ^7.1.0
+  contacts_service: ^0.6.1
 
+  provider: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # database
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+
+
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +62,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+  # datatabse
+  hive_generator: ^1.1.1
+  build_runner: ^2.0.4
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -56,6 +76,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
