--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,10 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
 
-
+  #grouped_list: ^4.1.0
   auto_size_text: ^3.0.0
   intl: ^0.17.0
+  sticky_grouped_list: ^2.0.0-nullsafety.2
 
 dev_dependencies:
   flutter_test:
