--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   auto_size_text: ^3.0.0
   intl: ^0.17.0
   sticky_grouped_list: ^2.0.0-nullsafety.2
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
