--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   intl: ^0.17.0
   sticky_grouped_list: ^2.0.0-nullsafety.2
   flutter_datetime_picker: ^1.5.1
+  datetime_picker_formfield: ^2.0.0
+  fluttercontactpicker: ^4.6.0
+  image_picker: ^0.8.4+5
 
 dev_dependencies:
   flutter_test:
