--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   google_maps_flutter: ^2.0.3
+
+
   http: ^0.13.2
   camera: ^0.8.1
   path_provider: ^2.0.1
@@ -58,6 +60,8 @@ dependencies:
   datetime_picker_formfield: ^2.0.0
   fluttercontactpicker: ^4.6.0
   image_picker: ^0.8.4+5
+
+  place_picker: ^0.9.19
 
 dev_dependencies:
   flutter_test:
